# pinyas_crud

./: Cargo.toml
src/: main.rs  styles.css
